--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -79,12 +79,12 @@
 
       <nav class="nav social-nav pull-right d-none d-lg-inline">
         {{#if user}}
-        <a href="https://twitter.com/partidomorado" target="_blank"><i class="fa fa-twitter"></i></a> 
-        <a href="https://www.facebook.com/partidomorado/" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/JOHNMENDOZAG" target="_blank"><i class="fa fa-twitter"></i></a> 
+        <a href="https://www.facebook.com/JohnMendozaG" target="_blank"><i class="fa fa-facebook"></i></a>
         <a href="/users/logout">Salir</a> 
         {{else}}
-        <a href="https://twitter.com/partidomorado" target="_blank"><i class="fa fa-twitter"></i></a> 
-        <a href="https://www.facebook.com/partidomorado/" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/JOHNMENDOZAG" target="_blank"><i class="fa fa-twitter"></i></a> 
+        <a href="https://www.facebook.com/JohnMendozaG" target="_blank"><i class="fa fa-facebook"></i></a>
         <a href="/users/signin">Entrar</a> 
         {{/if}}
         
