--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -5,7 +5,7 @@
   <a href="/notes/add" class="btn btn-dark">Agregar nota</a>
 </div>
 <div class="row">
-  <div class="container">
+  <div>
       {{> errors }}
       {{> messages }}
   </div>
