--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,9 +1,9 @@
 <div class="col-sm-12 col-md-4">
   <div class="card text-center">
-    <div class="container">
+    <div>
       {{> errors }}
       {{> messages }}
-  </div>
+    </div>
     <div class="card-header">
       <h3>Nueva Nota</h3>
     </div>
