--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -25,10 +25,10 @@
     
   </div>
 </div>
-<div class="container">
+<div>
       {{> errors }}
       {{> messages }}
-  </div>
+</div>
 
 <style>
    #tituloCard {
