--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -57,10 +57,10 @@
                                     <div class="col-md-4"></div>
                                     </div>
                                 </div>
-                                <div class="container">
-      {{> errors }}
-      {{> messages }}
-  </div>
+                                <div>
+                                    {{> errors }}
+                                    {{> messages }}
+                                </div>
 
       
         <!-- End About -->
