--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -20,19 +20,19 @@
 
         <div class="stats-col text-center col-md-3 col-sm-6">
           <div class="circle">
-            <span class="stats-no" data-toggle="counter-up">64,223</span> ACADÉMICOS Y GOBIERNO
+            <span class="stats-no" data-toggle="counter-up">64,223</span> ACADÉMICOS Y DEL GOBIERNO
           </div>
         </div>
 
         <div class="stats-col text-center col-md-3 col-sm-6">
           <div class="circle">
-            <span class="stats-no" data-toggle="counter-up">463</span> LÍDERES DE EMPRESAS
+            <span class="stats-no" data-toggle="counter-up">2,463</span> LÍDERES DE EMPRESAS
           </div>
         </div>
 
         <div class="stats-col text-center col-md-3 col-sm-6">
           <div class="circle">
-            <span class="stats-no" data-toggle="counter-up">643</span> LÍDERES DE COMUNIDADES
+            <span class="stats-no" data-toggle="counter-up">5,643</span> LÍDERES DE COMUNIDADES
           </div>
         </div>
       </div>
@@ -117,7 +117,7 @@
                 </h3>
 
               <p>
-                Creemos que las soluciones a los grandes desafíos se llegará mediante la creatividad.
+                Creemos que las soluciones a los grandes desafíos se llegará mediante la innovación.
               </p>
             </div>
           </div>
@@ -139,7 +139,7 @@
                 </h3>
 
               <p>
-                Buscamos soluciones basadas en nuevas tecnologías con propuestas concretas.
+                Buscamos soluciones basadas en nuevas tecnologías y sus propuestas concretas.
               </p>
             </div>
           </div>
@@ -487,65 +487,4 @@
   <!-- /Team -->
   <!-- @component: footer -->
 
-  <section id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h2 class="section-title">Contáctanos</h2>
-        </div>
-      </div>
-
-      <div class="row justify-content-center">
-        <div class="col-lg-3 col-md-4">
-          <div class="info">
-            <div>
-              <i class="fa fa-map-marker"></i>
-              <p>Sede Central<br>Lima, PERÚ</p>
-            </div>
-
-            <div>
-              <i class="fa fa-envelope"></i>
-              <p>jomendozag@uni.pe</p>
-            </div>
-
-            <div>
-              <i class="fa fa-phone"></i>
-              <p>+51 997 153 705</p>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="col-lg-5 col-md-8">
-          <div class="form">
-            <div id="sendmessage">Your message has been sent. Thank you!</div>
-            <div id="errormessage"></div>
-            <form action="/contacts/add" method="post" role="form" class="contactForm">
-              <div class="form-group">
-                <input type="text" name="name" class="form-control" id="name" value="{{name}}" placeholder="Su nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars" autocomplete="off"/>
-                <div class="validation"></div>
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" name="email" id="email" value="{{email}}" placeholder="Su email" data-rule="email" data-msg="Please enter a valid email" autocomplete="off"/>
-                <div class="validation"></div>
-              </div>
-              <div class="form-group">
-                <input type="number" class="form-control" name="phone" id="email" value="{{phone}}" placeholder="Su teléfono celular" data-rule="email" data-msg="Please enter a valid email" autocomplete="off"/>
-                <div class="validation"></div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" value="{{subject}}" placeholder="Asunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" autocomplete="off" />
-                <div class="validation"></div>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Mensaje"></textarea>
-                <div class="validation"></div>
-              </div>
-              <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
+ 
