--- a/src/views/notes/edit-note.hbs
+++ b/src/views/notes/edit-note.hbs
@@ -9,7 +9,7 @@
 
 <div class="col-md-4 mx-auto">
   <div class="card">
-    <div class="container">
+    <div>
       {{> errors }}
       {{> messages }}
   </div>
