--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -42,17 +42,19 @@
                 <a href="/">Principal</a>
               </li>
               <li class="list-inline-item">
-                <a href="/notes">Contactos</a>
+                <a href="/notes">Notas</a>
               </li>
-              <li class="list-inline-item">
+              <!--
+                <li class="list-inline-item">
                 <a href="/users/signup">Registrar</a>
               </li>
+              -->
           {{else}}
           <li><a href="#about">ChallengeX</a></li>
           <li><a href="#features">Pilares</a></li>
           <li><a href="#portfolio">Eventos</a></li>
           <li><a href="#team">Países</a></li>
-          <li><a href="#contact">Contáctanos</a></li>
+          <li><a href="/contact">Contáctanos</a></li>
           {{/if}}
           <!--
             <li class="menu-has-children"><a href="">Drop Down</a>
