--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -18,11 +18,13 @@
                 <a href="/">Principal</a>
               </li>
               <li class="list-inline-item">
-                <a href="/notes">Contactos</a>
+                <a href="/notes">Notas</a>
               </li>
-              <li class="list-inline-item">
+              <!--
+                <li class="list-inline-item">
                 <a href="/users/signup">Registrar</a>
               </li>
+              -->
           {{else}}
           <li><a href="#about">ChallengeX</a></li>
           <li><a href="#features">Pilares</a></li>
