--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
- <!--
+  <!--
    <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>IAnalytics</title>
@@ -16,18 +17,18 @@
     
     <link rel="stylesheet" href="/css/main.css">
  -->
-  <title>ChallengeX</title>
+  <title>ChallengeX: Retos globales</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
   <!--FAVICON-->
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-<link rel="manifest" href="img/site.webmanifest">
-<link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="manifest" href="img/site.webmanifest">
+  <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Facebook Opengraph integration: https://developers.facebook.com/docs/sharing/opengraph -->
   <meta property="og:title" content="">
@@ -58,17 +59,18 @@
   <!-- Main Stylesheet File -->
   <link href="/css/style.css" rel="stylesheet">
 </head>
+
 <body>
-    
-    {{#if user}}
-    {{> navigation_new}}
-    {{else}}
-    {{> navigation}}
-    {{/if}}
 
-    {{{ body }}}
+  {{#if user}}
+  {{> navigation_new}}
+  {{else}}
+  {{> navigation}}
+  {{/if}}
 
-    {{> footer}}
+  {{{ body }}}
+
+  {{> footer}}
 
   <!-- Required JavaScript Libraries -->
   <script src="/lib/jquery/jquery.min.js"></script>
@@ -90,6 +92,6 @@
 
   <script src="/contactform/contactform.js"></script>
 
-  </body>
-</html>
+</body>
 
+</html>
