--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -1,50 +1,52 @@
+<div class="container">
 
+</div>
 
 <div class="container">
   <div id="agregarNotas" class="mt-2">
-  <a href="/notes/add" class="btn btn-dark">Agregar nota</a>
-</div>
-<div class="row">
+    <a href="/notes/add" class="btn btn-dark">Agregar nota</a>
+  </div>
   <div>
       {{> errors }}
       {{> messages }}
   </div>
-  {{#each notes}}
-  <div class="col-sm-12 col-md-3">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title d-flex justify-content-between align-items-center">
-          {{ title }} <a href="/notes/edit/{{_id}}"><i class="fa fa-file-text-o"></i></a>
-        </h4>
-        <p>{{ description }}</p>
-        <!-- DELETE REQUEST -->
-        <form action="/notes/delete/{{_id}}?_method=DELETE" method="POST">
-          <input type="hidden" name="_method" value="DELETE">
-          <button type="submit" class="btn btn-danger btn-block btn-sm">Eliminar</button>
-        </form>
+  <div class="row">
+    {{#each notes}}
+    <div class="col-sm-12 col-md-3">
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title d-flex justify-content-between align-items-center">
+            {{ title }} <a href="/notes/edit/{{_id}}"><i class="fa fa-file-text-o"></i></a>
+          </h4>
+          <p>{{ description }}</p>
+          <!-- DELETE REQUEST -->
+          <form action="/notes/delete/{{_id}}?_method=DELETE" method="POST">
+            <input type="hidden" name="_method" value="DELETE">
+            <button type="submit" class="btn btn-danger btn-block btn-sm">Eliminar</button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-  {{else}}
-  <div class="card mx-auto">
-    <div class="card-body">
-      <h1>Hola {{user.name}}</h1>
-      <p class="lead">Todavía no tienes notas.</p>
-      <a href="/notes/add" class="btn btn-success btn-block">Crear Uno!</a>
+    {{else}}
+    <div class="card mx-auto">
+      <div class="card-body">
+        <h1>Hola {{user.name}}</h1>
+        <p class="lead">Todavía no tienes notas.</p>
+        <a href="/notes/add" class="btn btn-primary btn-block">Crear Uno!</a>
+      </div>
     </div>
+    {{/each}}
   </div>
-  {{/each}}
-</div>
 </div>
 
 
 <style>
-  #agregarNotas .btn{
+  #agregarNotas .btn {
     background-color: #01b7ee;
-            color: #0c0b0b;
-            padding: 10px;
-            margin-bottom: 20px;
-            font-size: 16px;
-            border-radius: 3px;
+    color: #0c0b0b;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    border-radius: 3px;
   }
 </style>
