--- a/src/views/notes/edit-note.hbs
+++ b/src/views/notes/edit-note.hbs
@@ -12,7 +12,7 @@
     <div>
       {{> errors }}
       {{> messages }}
-  </div>
+    </div>
     <div class="card-header">
       <h3>Editar Nota</h3>
     </div>
@@ -20,10 +20,11 @@
       <form action="/notes/edit-note/{{note._id}}?_method=PUT" method="POST">
         <input type="hidden" name="_method" value="PUT">
         <div class="form-group">
-          <input type="text" name="title" class="form-control" value="{{note.title}}"/>
+          <input type="text" name="title" class="form-control" value="{{note.title}}" />
         </div>
         <div class="form-group">
-          <textarea name="description" class="form-control" placeholder="Description máximo 250 palabras" autocomplete="off" rows="8" cols="50" maxlength="200">{{note.description}}</textarea>
+          <textarea name="description" class="form-control" placeholder="Description máximo 250 palabras"
+            autocomplete="off" rows="8" cols="50" maxlength="200">{{note.description}}</textarea>
         </div>
         <div class="form-group">
           <button class="btn btn-primary btn-block" type="submit">
@@ -34,4 +35,3 @@
     </div>
   </div>
 </div>
-
