--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -1,38 +1,37 @@
 <!-- Page Content ================================================== -->
+<!-- Header -->
+<header id="header">
+  <div class="container">
+    <div id="logo" class="pull-left">
+      <a href="/"><img src="img/logoWeb.png" alt="" title="" /></img></a>
+      <!-- Uncomment below if you prefer to use a text image -->
+      <!--<h1><a href="#hero">Bell</a></h1>-->
+    </div>
 
-  <!-- Header -->
-
-  <header id="header">
-    <div class="container">
-
-      <div id="logo" class="pull-left">
-        <a href="/"><img src="img/logoWeb.png" alt="" title="" /></img></a>
-        <!-- Uncomment below if you prefer to use a text image -->
-        <!--<h1><a href="#hero">Bell</a></h1>-->
-      </div>
-
-      <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          {{#if user}}
-              <li class="list-inline-item">
-                <a href="/">Principal</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="/notes">Notas</a>
-              </li>
-              <!--
+    <nav id="nav-menu-container">
+      <ul class="nav-menu">
+        
+        <li class="list-inline-item">
+          <a href="/desafios">Retos globales</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="/notes">Notas</a>
+        </li>
+        <!--
                 <li class="list-inline-item">
                 <a href="/users/signup">Registrar</a>
               </li>
               -->
-          {{else}}
+        
+        <!--
           <li><a href="#about">ChallengeX</a></li>
-          <li><a href="#features">Pilares</a></li>
-          <li><a href="#portfolio">Eventos</a></li>
-          <li><a href="#team">Sedes</a></li>
-          <li><a href="#contact">Contáctanos</a></li>
-          {{/if}}
-          <!--
+        <li><a href="#features">Pilares</a></li>
+        <li><a href="#portfolio">Eventos</a></li>
+        <li><a href="#team">Sedes</a></li>
+        -->
+        <li><a href="/contact">Contáctanos</a></li>
+       
+        <!--
             <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -51,26 +50,21 @@
             </ul>
           </li>
           -->
-        </ul>
-      </nav>
-      <!-- #nav-menu-container -->
+      </ul>
+    </nav>
+    <!-- #nav-menu-container -->
 
-      <nav class="nav social-nav pull-right d-none d-lg-inline">
-        {{#if user}}
-        <a href="https://twitter.com/partidomorado" target="_blank"><i class="fa fa-twitter"></i></a> 
-        <a href="https://www.facebook.com/partidomorado/" target="_blank"><i class="fa fa-facebook"></i></a>
-        <a href="/users/logout">Salir</a> 
-        {{else}}
-        <a href="https://twitter.com/partidomorado" target="_blank"><i class="fa fa-twitter"></i></a> 
-        <a href="https://www.facebook.com/partidomorado/" target="_blank"><i class="fa fa-facebook"></i></a>
-        <a href="/users/signin">Entrar</a> 
-        {{/if}}
-        
-        <!--
+    <nav class="nav social-nav pull-right d-none d-lg-inline">
+      <a href="https://twitter.com/JOHNMENDOZAG" target="_blank"><i class="fa fa-twitter"></i></a>
+      <a href="https://www.facebook.com/JohnMendozaG" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="/users/logout">Salir</a>
+      
+
+      <!--
           <a href="https://www.linkedin.com/in/julioguzmancaceres/" target="_blank"><i class="fa fa-linkedin"></i></a> 
           <a href="#"><i class="fa fa-envelope"></i></a>
           -->
-      </nav>
-    </div>
-  </header>
-  <!-- #header -->
+    </nav>
+  </div>
+</header>
+<!-- #header -->
