--- a/src/views/desafios.hbs
+++ b/src/views/desafios.hbs
@@ -1,3 +1,170 @@
+<div class="jumbotron">
+  <div class="row">
+    <div class="col-md-4">
+
+    </div>
+    <div class="col-md-4">
+      <h4 class="mt-3"><b>Desafíos Nacionales e Internacionales</b></h4>
+    </div>
+    <div class="col-md-4">
+      <a href="#" class="btn">Documentación</a>
+    </div>
+  </div>
+</div>
+
+
+<div class="container text-center">
+  <!--Contenido de Desafíos-->
+  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+            height="64px"></a>
+      </div>
+      <div class="col-md-6">
+        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-sm-6 col-md-12 mt-2">
+            $100,230
+          </div>
+          <div class="col-sm-6 col-md-12 mb-2">
+            2,934 equipos
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="#"><img src="img/empresas/thumb76_77.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+            height="64px"></a>
+      </div>
+      <div class="col-md-6">
+        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-sm-6 col-md-12 mt-2">
+            $100,230
+          </div>
+          <div class="col-sm-6 col-md-12 mb-2">
+            2,934 equipos
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+            height="64px"></a>
+      </div>
+      <div class="col-md-6">
+        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-sm-6 col-md-12 mt-2">
+            $100,230
+          </div>
+          <div class="col-sm-6 col-md-12 mb-2">
+            2,934 equipos
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="#"><img src="img/empresas/thumb76_77.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+            height="64px"></a>
+      </div>
+      <div class="col-md-6">
+        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-sm-6 col-md-12 mt-2">
+            $100,230
+          </div>
+          <div class="col-sm-6 col-md-12 mb-2">
+            2,934 equipos
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+            height="64px"></a>
+      </div>
+      <div class="col-md-6">
+        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-sm-6 col-md-12 mt-2">
+            $100,230
+          </div>
+          <div class="col-sm-6 col-md-12 mb-2">
+            2,934 equipos
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="#"><img src="img/empresas/thumb76_77.png" class="mr-3 rounded" alt="Logo organización" width="64px"
+            height="64px"></a>
+      </div>
+      <div class="col-md-6">
+        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+      </div>
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-sm-6 col-md-12 mt-2">
+            $100,230
+          </div>
+          <div class="col-sm-6 col-md-12 mb-2">
+            2,934 equipos
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<style>
+  .jumbotron {
+    background: #4ebff0;
+  }
+
+  #desafioContent {
+    background: #ffffff;
+  }
+</style>
+<!--
+  
 <div id="principal" class="jumbotron jumbotron-fluid mt-4">
   <div class="container text-center">
     <h3 id="lead1">Desafío nacionales e internacionales</h3>
@@ -46,7 +213,8 @@
     <div class="card-footer">
       <button id="buttonForm" class="btn btn-block">Conocer más <i class="fas fa-external-link-alt"></i></button>
       <button id="buttonForm2" class="btn btn-block">Subir solución <i class="fas fa-file-upload"></i></button>
-      <!--<small class="text-muted">Last updated 3 mins ago</small>-->
+      <small class="text-muted">Last updated 3 mins ago</small>
+
     </div>
   </div>
   <div id="fourthCard" class="card">
@@ -65,91 +233,4 @@
 </div>
 </div>
 
-
-
-<style>
-  body {
-    background: #000000;
-  }
-
-  #lead {
-    color: #76ff03;
-  }
-
-  #lead1 {
-    color: #000000;
-  }
-
-  #principal {
-    background-color: #01b7ee;
-    color: rgb(8, 8, 8);
-  }
-
-  #firstCard {
-    text-align: center;
-    background: #ffff00;
-    color: #040505;
-    border-radius: 5px;
-    border: solid 1px #ffff00;
-    font-family: 'Open Sans', sans-serif;
-    margin-top: 20px;
-  }
-
-  #secondCard {
-    text-align: center;
-    background: #e91e63;
-    color: #040505;
-    border-radius: 5px;
-    border: solid 1px #e91e63;
-    font-family: 'Open Sans', sans-serif;
-    margin-top: 20px;
-  }
-
-  #thirthCard {
-    text-align: center;
-    background: #76ff03;
-    color: #040505;
-    border-radius: 5px;
-    border: solid 1px #76ff03;
-    font-family: 'Open Sans', sans-serif;
-    margin-top: 20px;
-  }
-
-  #fourthCard {
-    text-align: center;
-    background: #d500f9;
-    color: #040505;
-    border-radius: 5px;
-    border: solid 1px #d500f9;
-    font-family: 'Open Sans', sans-serif;
-    margin-top: 20px;
-  }
-
-  #buttonForm {
-    border: solid 1px #070707;
-    color: #070707;
-    margin: 5px;
-    padding: 10px;
-    border-radius: 3px;
-  }
-
-  #buttonForm:hover {
-    border: solid 1px #070707;
-    color: #ffffff;
-    background-color: #070707;
-  }
-
-  #buttonForm2 {
-    border: solid 1px #070707;
-    color: #070707;
-    margin: 5px;
-    padding: 10px;
-    border-radius: 3px;
-  }
-
-  #buttonForm2:hover {
-    border: solid 1px #070707;
-    color: #070707;
-    background-color: #00b0ff;
-  }
-</style>
+-->
