--- a/src/views/contact.hbs
+++ b/src/views/contact.hbs
@@ -35,29 +35,29 @@
         <div class="form">
           <form action="/contacts/add" method="post" role="form" class="contactForm">
             <div class="form-group">
-              <input type="text" name="name" class="form-control" id="name" value="{{user.name}}" placeholder="Su nombre"
+              <input type="text" name="name" class="form-control" id="campoForm" value="{{user.name}}" placeholder="Su nombre"
                 data-rule="minlen:4" data-msg="Please enter at least 4 chars" autocomplete="off" autofocus />
               <div class="validation"></div>
             </div>
             <div class="form-group">
-              <input type="email" class="form-control" name="email" id="email" value="{{user.email}}" placeholder="Su email"
+              <input type="email" class="form-control" name="email" id="campoForm" value="{{user.email}}" placeholder="Su email"
                 data-rule="email" data-msg="Please enter a valid email" autocomplete="off" />
               <div class="validation"></div>
             </div>
             <div class="form-group">
-              <input type="number" class="form-control" name="phone" id="email" value="{{phone}}"
+              <input type="number" class="form-control" name="phone" id="campoForm" value="{{phone}}"
                 placeholder="Su teléfono celular" data-rule="email" data-msg="Please enter a valid email"
                 autocomplete="off" />
               <div class="validation"></div>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" name="subject" id="subject" value="{{subject}}"
+              <input type="text" class="form-control" name="subject" id="campoForm" value="{{subject}}"
                 placeholder="Asunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject"
                 autocomplete="off" />
               <div class="validation"></div>
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="message" rows="5" data-rule="required"
+              <textarea id="campoForm" class="form-control" name="message" rows="5" data-rule="required"
                 data-msg="Please write something for us" placeholder="Mensaje: duda o consulta"></textarea>
               <div class="validation"></div>
             </div>
