--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -249,7 +249,7 @@
             </h3>
 
             <p>
-              Buscamos soluciones basadas en nuevas tecnologías y sus propuestas concretas.
+              Buscamos soluciones basadas en nuevas tecnologías y con propuestas concretas.
             </p>
           </div>
         </div>
