--- a/src/views/desafios.hbs
+++ b/src/views/desafios.hbs
@@ -22,8 +22,9 @@
             height="64px"></a>
       </div>
       <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
         <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
+        
       </div>
       <div class="col-md-3">
         <div class="row">
@@ -45,7 +46,7 @@
             height="64px"></a>
       </div>
       <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
         <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
       </div>
       <div class="col-md-3">
@@ -68,7 +69,7 @@
             height="64px"></a>
       </div>
       <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
         <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
       </div>
       <div class="col-md-3">
@@ -91,7 +92,7 @@
             height="64px"></a>
       </div>
       <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
         <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
       </div>
       <div class="col-md-3">
@@ -114,7 +115,7 @@
             height="64px"></a>
       </div>
       <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
         <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
       </div>
       <div class="col-md-3">
@@ -137,7 +138,7 @@
             height="64px"></a>
       </div>
       <div class="col-md-6">
-        <h5 class="mt-0 mb-1"><a href="#">Two Sigma: Using News to Predict Stock Movements</a></h5>
+        <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
         <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
       </div>
       <div class="col-md-3">
