--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -16,7 +16,7 @@
         <div class="card-body">
           <img src="img/computer.png" alt="computer" srcset="" width="100%" height="auto">
         </div>
-        <h4>Constribuyendo al desarrollo de una sociedad más justa y equitativa</h4>
+        <h4>Contribuyendo al desarrollo de una sociedad más justa y equitativa</h4>
       </div>
     </div>
     <div class="col-md-4">
@@ -27,7 +27,7 @@
         <div id="description_card">
           <small><span>Si ha olvidado su <a href="#" style="color:#0886bd"><b>Contraseña</b></a></span></small>
         </div>
-        <img class="mx-auto d-block logo m-4" src="/img/logo.png" alt="Logo">
+        <img class="mx-auto d-block logo m-4" src="/img/logoIndex.png" alt="Logo ChallengeX" width="150px" height="auto">
         <div class="card-body">
           <form action="/users/signin" method="POST">
             <div class="form-group">
