--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -30,7 +30,7 @@
   <div class="container">
 
     <div id="logo" class="pull-left">
-      <a href="/"><img src="img/logoWeb.png" alt="" title="" /></img></a>
+      <a href="/"><img src="/img/logoWeb.png" alt="" title="" /></img></a>
       <!-- Uncomment below if you prefer to use a text image -->
       <!--<h1><a href="#hero">Bell</a></h1>-->
     </div>
@@ -84,7 +84,7 @@
     <nav class="nav social-nav pull-right d-none d-lg-inline">
       <a href="https://twitter.com/JOHNMENDOZAG" target="_blank"><i class="fa fa-twitter"></i></a>
       <a href="https://www.facebook.com/JohnMendozaG" target="_blank"><i class="fa fa-facebook"></i></a>
-      <a href="#login" target="_blank">Login</a>
+      <a href="/">Login</a>
       
       <!--
           <a href="https://www.linkedin.com/in/julioguzmancaceres/" target="_blank"><i class="fa fa-linkedin"></i></a> 
