--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -16,7 +16,7 @@
       <div class="card">
         <div class="card-body">
           <h4 class="card-title d-flex justify-content-between align-items-center">
-            {{ title }} <a href="/notes/edit/{{_id}}"><i class="fa fa-file-o"></i></a>
+            {{ title }} <a href="/notes/edit/{{_id}}"><i class="fa fa-file-o" style="color:#0886bd"></i></a>
           </h4>
           <p>{{ description }}</p>
           <!-- DELETE REQUEST -->
