--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -3,7 +3,7 @@
 <header id="header">
   <div class="container">
     <div id="logo" class="pull-left">
-      <a href="/"><img src="img/logoWeb.png" alt="" title="" /></img></a>
+      <a href="/"><img src="/img/logoWeb.png" alt="" title="" /></img></a>
       <!-- Uncomment below if you prefer to use a text image -->
       <!--<h1><a href="#hero">Bell</a></h1>-->
     </div>
