Make update the best

--- a/src/views/competitions/competencia.hbs
+++ b/src/views/competitions/competencia.hbs
@@ -69,12 +69,14 @@
                 </div>
                 <div class="col-md-9">
 
-                    <div class="text-center">
-                        <p>Can we use the content of news analytics to predict stock price performance? The ubiquity of data today enables investors at any scale to make better investment decisions. The challenge is ingesting and interpreting the data to determine which data is useful, finding the signal in this sea of information. Two Sigma is passionate about this challenge and is excited to share it with the Kaggle community.</p>
-                        <img src="/img/empresas/thumb76_76.png" alt="Imgen Empresa" class="rounded" width="200px">
-                        <p>As a scientifically driven investment manager, Two Sigma has been applying technology and data science to financial forecasts for over 17 years. Their pioneering advances in big data, AI, and machine learning have pushed the investment industry forward. Now, they're eager to engage with Kagglers in this continuing pursuit of innovation.</p>
-                        <p>By analyzing news data to predict stock prices, Kagglers have a unique opportunity to advance the state of research in understanding the predictive power of the news. This power, if harnessed, could help predict financial outcomes and generate significant economic impact all over the world.</p>
-                        <p>Data for this competition comes from the following sources:</p>
+                    <div class="text-justify">
+                        <p id="parrafoCompetition">Can we use the content of news analytics to predict stock price performance? The ubiquity of data today enables investors at any scale to make better investment decisions. The challenge is ingesting and interpreting the data to determine which data is useful, finding the signal in this sea of information. Two Sigma is passionate about this challenge and is excited to share it with the Kaggle community.</p>
+                        <div class="text-center">
+                            <img src="/img/empresas/thumb76_76.png" alt="Imgen Empresa" class="rounded" width="200px">
+                        </div>
+                        <p id="parrafoCompetition">As a scientifically driven investment manager, Two Sigma has been applying technology and data science to financial forecasts for over 17 years. Their pioneering advances in big data, AI, and machine learning have pushed the investment industry forward. Now, they're eager to engage with Kagglers in this continuing pursuit of innovation.</p>
+                        <p id="parrafoCompetition">By analyzing news data to predict stock prices, Kagglers have a unique opportunity to advance the state of research in understanding the predictive power of the news. This power, if harnessed, could help predict financial outcomes and generate significant economic impact all over the world.</p>
+                        <p id="parrafoCompetition">Data for this competition comes from the following sources:</p>
                     </div>
                     <div>
                         <ul>
