--- a/src/views/desafios.hbs
+++ b/src/views/desafios.hbs
@@ -14,8 +14,32 @@
 
 
 <div class="container text-center">
-  <!--Contenido de Desafíos-->
+
+
   <div class="jumbotron m-0 p-0 mb-4" id="desafioContent">
+    <div class="container m-4">
+      <div id="navigation">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link active" href="/competitions/theme1/general">General</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/competitions/theme1/information">+Información</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/competitions/theme1/discusion">Discusión</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/competitions/theme1/rules">Reglas</a>
+          </li>
+          <li class="nav-item">
+            <a class="search nav-link" href="/competitions/theme1/rules">Buscar</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!--Contenido de Desafíos-->
     <div class="row">
       <div class="col-md-3">
         <a href="#"><img src="img/empresas/thumb76_76.png" class="mr-3 rounded" alt="Logo organización" width="64px"
@@ -24,7 +48,7 @@
       <div class="col-md-6">
         <h5 class="mt-0 mb-1"><a href="/competitions/theme1">Two Sigma: Using News to Predict Stock Movements</a></h5>
         <small>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.</small>
-        
+
       </div>
       <div class="col-md-3">
         <div class="row">
